<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/SurahNomor"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/number"
        android:layout_margin="10dp"
        android:textSize="25sp"
        style="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:id="@+id/SurahLatin"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/SurahNomor"
        android:text="@string/nama_surah"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/SurahArab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textDirection="anyRtl"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="6dp"
        android:text="@string/arab"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_toEndOf="@+id/SurahNomor"
        android:textColor="@color/white"
        android:id="@+id/TerjemahanSurah"
        android:layout_below="@id/SurahArab"
        android:text="@string/arti_surah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="70dp"
        android:paddingStart="15dp"/>

</RelativeLayout>