<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailSurahActivity">

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="20dp"
        android:background="@drawable/kpldtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/NoSurah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:layout_marginLeft="40dp"
            android:text="surah"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/arab"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/JumlahAyat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:text="@string/jumlah_ayat"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Tempat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tempat"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/NSView2"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="163dp"
        android:padding="10dp"
        android:background="@drawable/blkwlpl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVAyat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="268dp" />
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/BTAudio"
        android:layout_width="403dp"
        android:layout_height="43dp"
        android:layout_marginTop="120dp"
        android:text="@string/audio"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>